<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tatsuya.babymonitor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tatsuya.babymonitor.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <argument
            android:name="nameForConfirm"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tatsuya.babymonitor.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_live"
        android:name="com.tatsuya.babymonitor.ui.live.LiveFragment"
        android:label="@string/menu_live"
        tools:layout="@layout/fragment_live" />
</navigation>